ember-bdi/tests/macros/compile-fail/from_term_transparent_enum.stderr
error: #[ember(transparent)] cannot be used on enums
 --> tests/macros/compile-fail/from_term_transparent_enum.rs:6:6
  |
6 | enum Direction {
  |      ^^^^^^^^^
